@@ -11,7 +11,7 @@ import org.springframework.core.io.ClassPathResource;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -29,7 +29,7 @@ public class DeleteResourceBasedRegisteredServiceWatcherTests {
     public void verifyOperationNotFound() {
         val result = new AtomicBoolean(false);
         val watcher = new DeleteResourceBasedRegisteredServiceWatcher(new AbstractResourceBasedServiceRegistry(new ClassPathResource("services"),
-            Collections.singletonList(new RegisteredServiceJsonSerializer()), o -> result.set(o.getClass().equals(CasRegisteredServicesLoadedEvent.class)),
+            List.of(new RegisteredServiceJsonSerializer()), o -> result.set(o.getClass().equals(CasRegisteredServicesLoadedEvent.class)),
             new ArrayList<>()) {
             @Override
             protected String[] getExtensions() {
@@ -45,7 +45,7 @@ public class DeleteResourceBasedRegisteredServiceWatcherTests {
     public void verifyOperationFoundDeleted() {
         val result = new AtomicBoolean(false);
         val registry = new AbstractResourceBasedServiceRegistry(new ClassPathResource("services"),
-            Collections.singletonList(new RegisteredServiceJsonSerializer()), o -> result.set(o.getClass().equals(CasRegisteredServiceDeletedEvent.class)),
+            List.of(new RegisteredServiceJsonSerializer()), o -> result.set(o.getClass().equals(CasRegisteredServiceDeletedEvent.class)),
             new ArrayList<>()) {
             @Override
             protected String[] getExtensions() {
@@ -64,7 +64,7 @@ public class DeleteResourceBasedRegisteredServiceWatcherTests {
     public void verifyTempFilesIgnored() throws Exception {
         val result = new AtomicBoolean(false);
         val registry = new AbstractResourceBasedServiceRegistry(new ClassPathResource("services"),
-                Collections.singletonList(new RegisteredServiceJsonSerializer()), o -> result.set(o.getClass().equals(CasRegisteredServiceDeletedEvent.class)),
+                List.of(new RegisteredServiceJsonSerializer()), o -> result.set(o.getClass().equals(CasRegisteredServiceDeletedEvent.class)),
             new ArrayList<>()) {
             @Override
             protected String[] getExtensions() {
