@@ -1,15 +1,17 @@
 package org.apereo.cas.web.security.authentication;
 
+import org.apereo.cas.configuration.CasConfigurationProperties;
 import org.apereo.cas.util.junit.EnabledIfContinuousIntegration;
 
 import lombok.val;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.autoconfigure.security.SecurityProperties;
+import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.test.context.TestPropertySource;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -26,12 +28,13 @@ import static org.junit.jupiter.api.Assertions.*;
     "cas.monitor.endpoints.ldap.ldapAuthz.rolePrefix=ROLE_"
 })
 @EnabledIfContinuousIntegration
+@EnableConfigurationProperties(CasConfigurationProperties.class)
 public class MonitorEndpointLdapAuthenticationProviderRolesBasedTests extends BaseMonitorEndpointLdapAuthenticationProviderTests {
 
     @Test
     public void verifyAuthorizedByRole() {
         val securityProperties = new SecurityProperties();
-        securityProperties.getUser().setRoles(Collections.singletonList("ROLE_888"));
+        securityProperties.getUser().setRoles(List.of("ROLE_888"));
         val provider = new MonitorEndpointLdapAuthenticationProvider(casProperties.getMonitor().getEndpoints().getLdap(), securityProperties);
         val token = provider.authenticate(new UsernamePasswordAuthenticationToken("authzcas", "123456"));
         assertNotNull(token);
@@ -40,7 +43,7 @@ public class MonitorEndpointLdapAuthenticationProviderRolesBasedTests extends Ba
     @Test
     public void verifyUnauthorizedByRole() {
         val securityProperties = new SecurityProperties();
-        securityProperties.getUser().setRoles(Collections.singletonList("SOME_BAD_ROLE"));
+        securityProperties.getUser().setRoles(List.of("SOME_BAD_ROLE"));
         val provider = new MonitorEndpointLdapAuthenticationProvider(casProperties.getMonitor().getEndpoints().getLdap(), securityProperties);
         assertThrows(BadCredentialsException.class, () -> provider.authenticate(new UsernamePasswordAuthenticationToken("authzcas", "123456")));
     }
@@ -48,7 +51,7 @@ public class MonitorEndpointLdapAuthenticationProviderRolesBasedTests extends Ba
     @Test
     public void verifyUserNotFound() {
         val securityProperties = new SecurityProperties();
-        securityProperties.getUser().setRoles(Collections.singletonList("SOME_BAD_ROLE"));
+        securityProperties.getUser().setRoles(List.of("SOME_BAD_ROLE"));
         val provider = new MonitorEndpointLdapAuthenticationProvider(casProperties.getMonitor().getEndpoints().getLdap(), securityProperties);
         assertThrows(BadCredentialsException.class, () -> provider.authenticate(new UsernamePasswordAuthenticationToken("UNKNOWN_USER", "123456")));
     }
@@ -56,7 +59,7 @@ public class MonitorEndpointLdapAuthenticationProviderRolesBasedTests extends Ba
     @Test
     public void verifyUserBadPassword() {
         val securityProperties = new SecurityProperties();
-        securityProperties.getUser().setRoles(Collections.singletonList("SOME_BAD_ROLE"));
+        securityProperties.getUser().setRoles(List.of("SOME_BAD_ROLE"));
         val provider = new MonitorEndpointLdapAuthenticationProvider(casProperties.getMonitor().getEndpoints().getLdap(), securityProperties);
         assertThrows(BadCredentialsException.class, () -> provider.authenticate(new UsernamePasswordAuthenticationToken("authzcas", "BAD_PASSWORD")));
     }
